--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
+  "name": "seeforme-server",
+  "version": "1.0.0",
+  "description": "Signaling server for SeeForMe app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "websocket": "^1.0.35"
+    "ws": "^8.2.3",
+    "express": "^4.17.1",
+    "cors": "^2.8.5",
+    "body-parser": "^1.19.0",
+    "firebase-admin": "^11.0.0"
   }
 }
