add call history

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,11 @@
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+        <activity
+            android:name=".CallHistoryActivity"
+            android:exported="false"
+            android:label="История звонков"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <service
             android:name=".SeeForMeFirebaseMessagingService"
             android:exported="false">
